# data-trend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
admin-web/: package-lock.json  package.json
admin-web/src/: main.tsx  styles.css
apps/api/: bootstrap.py  config.py  dependencies.py  main.py  schemas.py  security.py
apps/api/routers/: admin.py  auth.py  mini.py
apps/worker/: run_housing_price_import.py
docs/: auth.md  config-history-rollback-plan.md  cpi-data-source.md  data-operations-display-productization-plan.md  data-source-extension.md  deployment.md  miniapp-api.md  miniapp-data-explanation-analysis-plan.md  miniapp-verification.md  multi-source-display-experience-audit.md  multi-source-display-experience-plan.md  next-stage-production-plan.md  ops-deployment-plan.md  product-usability-deepening-plan.md  quality-rules.md  reliability-and-productization-plan.md  worker-reliability.md
migrations/: env.py
migrations/versions/: 20260510_0001_baseline.py  20260510_0002_job_reliability.py  20260510_0003_quality_report_details.py  20260510_0004_productization_metadata.py  20260510_0005_operation_logs.py  20260510_0006_config_versions.py  20260510_0007_indicator_explanations.py
miniapp/: app.js  app.json  app.wxss  project.config.json
miniapp/tests/: page-smoke.test.js
scripts/: verify-miniapp-devtools.ps1  verify-multi-source-display.ps1
tests/: test_admin_api.py  test_cpi_importer.py  test_housing_price_parser.py  test_http_fetcher.py  test_importer.py  test_worker_loop.py
(+12 files in other folders)
